--- a/src/pages/Ocorrencia/Gerar/styles.css
+++ b/src/pages/Ocorrencia/Gerar/styles.css
@@ -1,5 +1,11 @@
+h1 {
+  padding: 0 0 0 0;
+}
 input {
   margin: 0 0 0 0;
+}
+select {
+  font-size: 16px;
 }
 
 label {
@@ -11,6 +17,8 @@ form {
   flex-direction: column;
   align-items: center;
 }
-.select {
-  font-size: 16px;
+.ocorrenciaAdd {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
