--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -8,6 +8,11 @@
     box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
 }
   
+.header-right {
+    display: flex;
+    cursor: pointer;
+}
+
 .menu-icon {
     display: none;
 }
