--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -1,58 +1,61 @@
-#drawer {
-    grid-area: drawer;
+#sidebar {
+    grid-area: sidebar;
     height: 100%;
     background-color: #263043;
     overflow-y: auto;
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
-    display: contents;
 }
-  
-.drawer-title {
+
+.sidebar-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 15px 30px 0px 30px;
     margin-bottom: 30px;
 }
-  
-.drawer-title > span {
+
+.sidebar-title>span {
     display: none;
 }
-  
-.drawer-brand {
+
+.sidebar-brand {
     margin-top: 15px;
     font-size: 20px;
     font-weight: 700;
 }
-  
-.drawer-list {
+
+.sidebar-list {
     padding: 0;
     list-style-type: none;
 }
-  
-.drawer-list-item {
+
+.sidebar-list-item {
     padding: 20px 20px 20px 20px;
     font-size: 18px;
 }
-  
-.drawer-list-item:hover {
+
+.sidebar-list-item:hover {
     background-color: rgba(255, 255, 255, 0.2);
     cursor: pointer;
 }
-  
-.drawer-list-item > a {
+
+.sidebar-list-item>a {
     text-decoration: none;
     color: #9e9ea4;
 }
-  
-.drawer-responsive {
+
+.sidebar-responsive {
     display: inline !important;
     position: absolute;
+    width: 260px;
+    height: 100%;
     /*
-      we want the z-index of the drawer higher so that
-      the charts are not showing over the drawer 
+      we want the z-index of the sidebar higher so that
+      the charts are not showing over the sidebar 
       on small screens
     */
     z-index: 12 !important;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
 }
