--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,4 +1,4 @@
-.root {
+.content {
   grid-area: main;
   overflow-y: auto;
   padding: 20px 20px;
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .container {
