--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -18,7 +18,7 @@ body {
   align-items: center;
   min-height: 100vh;
   padding: 1em;
-  background-image: url('../../assets/images.jfif');
+  background-image: url('../../assets/images.png');
   background-size: cover;
 }
 
