--- a/src/pages/History/styles.css
+++ b/src/pages/History/styles.css
@@ -1,5 +1,33 @@
+.content {
+  grid-area: main;
+  overflow-y: auto;
+  padding: 20px 20px;
+  color: rgba(255, 255, 255, 0.95);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* min-height: 100vh; */
+}
+
+.container {
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.select-container {
+  padding-bottom: 15px;
+}
+
+.title {
+  flex-grow: 1;
+}
+
+.title-container {
+  padding: 10px;
+}
+
 .historicoContainer {
-  width: 40vw;
   max-height: 400px;
   overflow-y: auto;
   border: 1px solid #020202;
