--- a/src/pages/RegisterVehicle/styles.css
+++ b/src/pages/RegisterVehicle/styles.css
@@ -1,3 +1,24 @@
+.content {
+  grid-area: main;
+  overflow-y: auto;
+  padding: 20px 20px;
+  color: rgba(255, 255, 255, 0.95);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* min-height: 100vh; */
+}
+
+.container {
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.title {
+  flex-grow: 1;
+}
+
 .veiculo {
   display: flex;
   flex-direction: column;
