--- a/src/pages/Report/New/styles.css
+++ b/src/pages/Report/New/styles.css
@@ -1,3 +1,14 @@
+.content {
+  grid-area: main;
+  overflow-y: auto;
+  padding: 20px 20px;
+  color: rgba(255, 255, 255, 0.95);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* min-height: 100vh; */
+}
+
 .container {
   margin: 0;
   padding: 0;
