--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,8 @@ body {
       grid-template-rows: 0.2fr 3fr;
       grid-template-areas:
           'header'
-          'main';
+          'main'
+          'login';
   }
 
   #sidebar {
