--- a/src/pages/Travels/styles.css
+++ b/src/pages/Travels/styles.css
@@ -1,5 +1,19 @@
-/* Adicione essas regras ao seu arquivo CSS */
+.content {
+  grid-area: main;
+  overflow-y: auto;
+  padding: 20px 20px;
+  color: rgba(255, 255, 255, 0.95);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* min-height: 100vh; */
+}
 
+.container {
+  max-width: 960px;
+  width: 100%;
+  margin: 0 auto;
+}
 .body {
   max-width: 1200px;
   margin: 0 auto;
@@ -25,15 +39,18 @@ thead {
   color: white;
 }
 
-th div {
+th p {
   font-size: 12px;
 }
-
+tbody tr:nth-child(odd) {
+  background-color: white; /* Cor de fundo alternada para linhas */
+}
 tbody tr:nth-child(even) {
   background-color: #f2f2f2; /* Cor de fundo alternada para linhas */
 }
 
-td div {
+td p {
+  color: black;
   font-size: 12px;
   margin-bottom: 5px;
 }
