--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -10,23 +10,71 @@ body {
   background-color: #f0f8ff;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Arial, sans-serif;
+}
+
 .login-container {
-  grid-area: login;
+  max-width: 100vw;
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left-container {
+  height: 100vh;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  color: black;
+  background: linear-gradient(
+    to right,
+    #006400,
+    #84ff84
+  ); /* Altere as cores conforme necessário */
+}
+
+.right-container {
+  max-width: 40vw;
+  height: 100vh;
+  background-color: #f0f8ff;
   padding: 1em;
-  background-image: url('../../assets/images.png');
-  background-size: cover;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.grid-container {
-  display: unset;
-}
+/* .logo {
+  width: 100px; 
+  height: auto;
+  margin-bottom: 1em;
+} */
 
-h2 {
+.right-container p {
+  margin-bottom: 5px;
+  color: black;
+  cursor: default;
+}
+.right-container p span {
+  color: blue;
+}
+.right-container p span:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+.titulo {
+  margin-bottom: 3em;
   color: #006400;
 }
 
@@ -35,21 +83,24 @@ h2 {
   flex-direction: column;
 }
 
-input {
-  margin-bottom: 1em;
-  padding: .5em;
+.right-container input {
+  margin-bottom: 0.8em;
+  padding: 0.5em;
   font-size: 1em;
 }
 
-button {
-  padding: .5em 1em;
+.right-container button {
+  margin: 10px;
+  padding: 0.5em 1em;
   font-size: 1em;
   color: white;
   background-color: #228b22;
   border: none;
+  cursor: pointer;
+  border-radius: 8px;
 }
 
-button:hover {
+.right-container button:hover {
   background-color: #006400;
 }
 
@@ -57,46 +108,12 @@ button:hover {
   color: red;
 }
 
-.login-container {
-  /* ...seus estilos existentes... */
-
-  /* Adicione um pouco de sombra para dar profundidade */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
-  /* Adicione algum preenchimento */
-  padding: 2em;
-
-  /* Adicione algum arredondamento nas bordas */
-  border-radius: 1em;
-
-  /* Centralize o conteúdo */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-input,
-button {
-  /* Adicione algum preenchimento */
-  padding: .5em;
-
-  /* Adicione algum arredondamento nas bordas */
-  border-radius: .5em;
-
-  /* Adicione uma borda */
-  border: 1px solid #ccc;
-}
-
-button {
-  /* Mude a cor de fundo e a cor do texto */
-  background-color: #228b22;
-  color: white;
-
-  /* Adicione algum espaço acima do botão */
-  margin-top: .5em;
-}
-
-button:hover {
-  /* Escureça a cor de fundo quando o mouse passar sobre o botão */
-  background-color: #006400;
+@media screen and (max-width: 600px) {
+  .left-container {
+    display: none;
+  }
+  .right-container {
+    width: 100vw;
+    max-width: 100vw;
+  }
 }
