--- a/src/pages/ChangeRole/styles.css
+++ b/src/pages/ChangeRole/styles.css
@@ -1,23 +1,3 @@
-.content {
-  grid-area: main;
-  overflow-y: auto;
-  padding: 20px 20px;
-  color: rgba(255, 255, 255, 0.95);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* min-height: 100vh; */
-}
-
-.container {
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  border: 0;
-  text-decoration: none;
-  box-sizing: border-box;
-}
-
 .body {
   display: flex;
   flex-direction: column;
@@ -25,102 +5,103 @@
   margin: 0 2rem; /* Reduzi a margem para melhor responsividade */
 }
 
-h1 {
+.change-role {
+  font-size: 2rem;
   text-align: center;
-  margin: 1rem 0; /* Reduzi a margem superior para melhor responsividade */
+  margin: 1rem 0;
 }
 
-form {
-  width: 100%; /* Ocupa a largura máxima do container pai */
-  max-width: 400px; /* Define uma largura máxima para evitar que o formulário fique muito largo */
+.buscar-email {
+  width: 100%;
+  max-width: 400px;
 }
 
 #email {
-  width: 100%; /* Ocupa a largura máxima do formulário */
+  width: 100%;
   box-sizing: border-box;
-  padding: 0.5rem; /* Adicionei um preenchimento para melhor aparência */
+  padding: 0.5rem;
+  border-radius: 5px;
+  font-size: 16px;
 }
 
 .botoes {
   display: flex;
   justify-content: flex-end;
-  margin-top: 0.3rem; /* Adicionei uma margem superior para melhor espaçamento */
+  margin-top: 0.3rem;
 }
 
 .botoes input {
   margin-left: 0.4rem;
-}
-
-/* Adicione uma regra de estilo de mídia para telas menores */
-@media (max-width: 600px) {
-  .body {
-    margin: 0 1rem; /* Ajusta a margem para telas menores */
-  }
-
-  #email {
-    width: 100%; /* Ocupa a largura total em telas menores */
-  }
+  padding: 0.3rem 0.7rem;
+  border-radius: 5px;
+  font-size: 15px;
 }
 
 .linha-horizontal {
-  width: 100%; /* Faz a linha ocupar a largura total do container pai */
-  height: 2px; /* Define a espessura da linha */
-  background-color: #ccc; /* Cor da linha */
-  margin-top: 1rem; /* Adicione uma margem superior para espaçamento */
-  margin-bottom: 1rem; /* Adicione uma margem inferior para espaçamento */
-  border: none; /* Remove a borda padrão */
-}
-
-/* .dados-adicionais {
-  text-align: center;
-  margin-top: 1rem;
-}
-
-.dados-adicionais label {
-  display: block;
-  margin-bottom: 0.5rem;
-}
-
-.dados-adicionais input,
-.dados-adicionais select {
   width: 100%;
-  box-sizing: border-box;
-  margin-bottom: 1rem;
-}
-
-.dados-adicionais img {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 1rem;
-} */
-
-/* Adicione essas regras ao seu CSS existente */
-
-.dados-adicionais {
-  text-align: center;
+  height: 2px;
+  background-color: #ccc;
   margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: none;
 }
 
-.dados-adicionais label {
-  display: block;
-  margin-bottom: 0.5rem;
+.dados-div {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.dados-adicionais input {
-  width: 100%;
+.dados-div label {
+  margin-top: 7px;
+  margin-bottom: 7px;
+}
+
+.dados-div input,
+.dados-div select {
+  margin-bottom: 0.6rem;
+  text-align: center;
+  width: 8rem;
   box-sizing: border-box;
   padding: 0.5rem;
-  margin-bottom: 1rem;
+  border-radius: 5px;
+  font-size: 15px;
 }
 
-.dados-adicionais img {
-  max-width: 100%;
+.dados-encontrados {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  align-items: center;
+  justify-content: center;
+}
+
+.dados-encontrados input {
+  text-align: left;
+  width: 50vw;
+}
+
+.img-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 1.5rem;
+}
+
+.img-div .img-driver {
+  max-width: 100px;
   height: auto;
-  margin-bottom: 1rem;
 }
 
-#tipo-usuario {
-  width: 50%;
-  margin: 0 auto;
-  padding: 0.5rem;
+@media screen and (max-width: 600px) {
+  .dados-encontrados {
+    flex-direction: column;
+  }
+  .dados-encontrados input {
+    width: 85vw;
+  }
+  .img-div {
+    margin-left: 0;
+  }
 }
