--- a/src/pages/Report/New/styles.css
+++ b/src/pages/Report/New/styles.css
@@ -1,23 +1,3 @@
-.content {
-  grid-area: main;
-  overflow-y: auto;
-  padding: 20px 20px;
-  color: rgba(255, 255, 255, 0.95);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* min-height: 100vh; */
-}
-
-.container {
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  border: 0;
-  text-decoration: none;
-  box-sizing: border-box;
-}
-
 .body {
   display: flex;
 
@@ -27,7 +7,6 @@
 }
 
 h1 {
-  padding-bottom: 2rem;
   margin: 2rem;
 }
 
@@ -43,10 +22,10 @@ h1 {
 }
 .date-picker {
   width: 10rem;
-}
-/* .date-picker::placeholder {
+  padding: 8px;
   text-align: center;
-} */
+  font-size: 15px;
+}
 
 #relatorio {
   display: flex;
@@ -63,9 +42,10 @@ form {
 label {
   display: block;
   margin-bottom: 8px;
+  text-align: center;
 }
 
-textarea {
+#obs {
   width: 100%;
   padding: 8px;
   resize: vertical; /* Isso permite a redimensionamento apenas na direção vertical */
