--- a/src/pages/Travels/styles.css
+++ b/src/pages/Travels/styles.css
@@ -1,29 +1,25 @@
 .content {
-  grid-area: main;
-  overflow-y: auto;
-  padding: 20px 20px;
-  color: rgba(255, 255, 255, 0.95);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* min-height: 100vh; */
+  padding: 10px 10px 10px 10px;
 }
 
-.container {
-  max-width: 960px;
+.navigation-btn {
   width: 100%;
-  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  box-sizing: border-box;
 }
-.body {
-  max-width: 1200px;
-  margin: 0 auto;
-  /* padding: 20px; */
+
+.navigation-btn button {
+  margin-left: 0.4rem;
+  padding: 0.3rem 0.7rem;
+  border-radius: 5px;
+  font-size: 15px;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 20px;
+  margin-top: 0.8rem;
 }
 
 th,
@@ -53,4 +49,16 @@ td p {
   color: black;
   font-size: 12px;
   margin-bottom: 5px;
+}
+
+@media screen and (max-width: 600px) {
+  .navigation-btn button {
+    margin-left: 0.4rem;
+    padding: 0.3rem 0.3rem;
+  }
+}
+@media screen and (max-width: 520px) {
+  .navigation-btn {
+    width: 512px;
+  }
 }
