--- a/src/pages/History/styles.css
+++ b/src/pages/History/styles.css
@@ -15,16 +15,16 @@
   margin: 0 auto;
 }
 
-.select-container {
-  padding-bottom: 15px;
+.input-data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1rem;
 }
 
-.title {
-  flex-grow: 1;
-}
-
-.title-container {
-  padding: 10px;
+.input-data .rdp {
+  text-align: center;
+  font-size: 15px;
 }
 
 .historicoContainer {
