--- a/src/pages/Ocorrencia/Gerar/styles.css
+++ b/src/pages/Ocorrencia/Gerar/styles.css
@@ -1,24 +1,46 @@
 h1 {
   padding: 0 0 0 0;
 }
-input {
-  margin: 0 0 0 0;
-}
-select {
-  font-size: 16px;
-}
 
-label {
-  margin-top: 12px;
-  margin-bottom: 7px;
-}
-form {
+.div-ocorrencia {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+.div-ocorrencia input,
+.div-ocorrencia select {
+  font-size: 15px;
+  text-align: center;
+  padding: 4px;
+  margin-bottom: 8px;
+}
+#ocorrencia {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#motivacao {
+  min-width: 500px;
+  width: 100%;
+  padding: 8px;
+  resize: vertical; /* Isso permite a redimensionamento apenas na direção vertical */
+  font-size: 15px;
+}
+
 .ocorrenciaAdd {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+  #motivacao {
+    min-width: 300px;
+  }
+}
+@media screen and (max-width: 400px) {
+  #motivacao {
+    min-width: 0;
+  }
 }
