--- a/src/pages/RegisterVehicle/styles.css
+++ b/src/pages/RegisterVehicle/styles.css
@@ -1,25 +1,20 @@
-.content {
-  grid-area: main;
-  overflow-y: auto;
-  padding: 20px 20px;
-  color: rgba(255, 255, 255, 0.95);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* min-height: 100vh; */
-}
-
-.container {
-  max-width: 960px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.title {
-  flex-grow: 1;
-}
-
 .veiculo {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  width: 40%;
 }
+.registrar-veiculo input {
+  font-size: 15px;
+  text-align: center;
+  padding: 4px;
+  margin-bottom: 8px;
+  width: 100%;
+}
+/*desnecessario pois ja estava em outro estilo*/
+/* .botoes input {
+  margin-left: 0.4rem;
+  padding: 0.3rem 0.7rem;
+  border-radius: 5px;
+  font-size: 15px;
+} */
